NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V1.28.0

	- cups-browsed: Remove left-over local queues from the
	  previous session more quickly when CUPS legacy browsing is
	  turned on.
	- cups-browsed: Left-over local queues from the previous
	  session for which the corresponding did not appear again did
	  not get removed as they were considered externally
	  overwritten.
	- gstoraster, gstopdf: Add option "-dDoNumCopies" to
	  Ghostscript command line if we are outputting PDF (called
	  via gstopdf wrapper) and the number of copies supplied to
	  CUPS is 1 (4th command line argument). In this case we
	  convert incoming PostScript to PDF and need to respect
	  embedded PostScript commands to implement the number of
	  copies (Issue #255, Issue #242, CUPS Issue #5796, OpenSUSE
	  bug #1173345).
	- imagetoraster: Potential null dereference fix (when no valid
	  PPD is supplied, Pull request #256).
	- libppd: Added the new libppd library overtaking all the PPD
	  handling functions from libcups as they are deprecated there
	  and will probably get removed with the next CUPS
	  version. This form of conservation is mainly intended for
	  converting classic printer drivers which use PPDs into
	  Printer Applications without completely rewriting them. Side
	  effect that all the compiler warnings about deprecated
	  libcups functions went away and so cups-filters is free of
	  warnings again. The library still needs some testing and
	  optimization.
	- Sample PPDs: Renamed source directory from "ppd/" to
          "ppdfiles/"
	- cups-browsed: Call cupsGetNamedDest() only if
	  "OnlyUnsupportedByCUPS No"
	- Sample PPDs: Corrected ColorModel default for Generic PWG
	  Raster PPD to Color (Pull request #247).
	- cups-browsed: Mark the temp queue as cups-browsed-generated
          during setting printer-is-shared (Pull request #246).
	- cups-browsed: Remove mentions of README and AUTHORS files in